@@ -30,6 +30,7 @@ open Params
 open Errors
 open Pdfstream
 open Find
+open Openfile
 
 
 (***************)
@@ -65,7 +66,7 @@ let handle_errors f x =
 
 let command_xreftable =
   let parse_xreftable filename =
-    let input = open_in_bin filename in
+    let input = OpenFile.in_bin filename in
     let stats = Stats.create () in
     let _, _, xref, _ = File.parse_until_xref input stats in
     close_in input;
@@ -157,7 +158,7 @@ let command_object =
     if !options_filename <> "" then
       Params.load_file Params.global !options_filename;
 
-    let input = open_in_bin filename in
+    let input = OpenFile.in_bin filename in
     let key = Key.make_gen_i !num !gen in
     let obj = extract_object input key in
     close_in input;
@@ -208,7 +209,7 @@ let command_trailer =
     if !options_filename <> "" then
       Params.load_file Params.global !options_filename;
 
-    let input = open_in_bin filename in
+    let input = OpenFile.in_bin filename in
     let trailers = extract_trailers input in
     List.iter (
       fun obj ->
