@@ -1,3 +1,6 @@
+Bugfixes:
+- Add sanity checks if a non-existing file or directory is given as argument.
+
 -------------------
 Version 0.3 (beta):
 -------------------
